hphp/hack/test/typecheck/goto/goto_without_label.php.exp
File "goto_without_label.php", line 4, characters 8-9:
Undefined goto label: L0 (Naming[2073])
