hphp/hack/test/typecheck/goto/goto_without_label.php
<?hh // partial

function gotoWithoutLabel(): void {
  goto L0;
}
